[win] Print preview scroll bar is wider
Categories
(Core :: Print Preview, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | verified |
firefox91 | --- | wontfix |
firefox92 | --- | wontfix |
firefox93 | --- | verified |
People
(Reporter: atrif, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
93.65 KB,
image/png
|
Details | |
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr91+
|
Details | Review |
Affected versions
- 91.0.2 (20210823123856)
- 92.0b7 (20210822190301)
- 93.0a1 (20210824094724)
Affected platforms
- Windows 10x64
Steps to reproduce
- Open Firefox and go to a website that has many pages.
- Enter the Print preview and observe the scroll bar.
Expected result
- Scrollbar has the same dimensions as the one from the browser.
Actual result
- Scroll bar is wider.
Regression range
- Last good revision: 64bc9459015c77f3a032bc4dcb9465c44281b7d9
First bad revision: e2e3769604efd9724670ca1474377789e003a992
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=64bc9459015c77f3a032bc4dcb9465c44281b7d9&tochange=e2e3769604efd9724670ca1474377789e003a992
Notes
- Attached a screenshot.
- The issue is reproducible on Windows only.
Reporter | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
Print preview documents might use a different DPI depending on the print
target.
Updated•4 years ago
|
Comment 4•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/3696b26ff0a2
https://hg.mozilla.org/mozilla-central/rev/3766f621ddb0
Reporter | ||
Comment 5•4 years ago
|
||
Verified fixed with 93.0a1 (20210831031805) from comment 4 on Windows 10x64. The scroll bar inside the print preview is displayed as expected.
Comment 6•4 years ago
|
||
Is this something we should consider taking on ESR91?
Assignee | ||
Comment 7•4 years ago
|
||
It's a minor cosmetic issue, but it should be safe. Your call.
Comment 8•4 years ago
|
||
Go ahead and nominate, seems like a simple-enough patch to take this early in the lifecycle.
Assignee | ||
Comment 9•4 years ago
|
||
Comment on attachment 9238481 [details]
Bug 1727289 - Prefer widget scale for scrollbar parts. r=mstange
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: See above.
- User impact if declined: comment 0
- Fix Landed on Version: 93
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Pretty straight-forward fix.
- String or UUID changes made by this patch: none
Comment 10•4 years ago
|
||
Comment on attachment 9238481 [details]
Bug 1727289 - Prefer widget scale for scrollbar parts. r=mstange
Approved for 91.2esr.
Comment 11•4 years ago
|
||
bugherder uplift |
Reporter | ||
Comment 12•3 years ago
|
||
Verified fixed with 91.2.0esr (20210927140538) on Windows 10x64.
Description
•