Bug 1727289 - Prefer widget scale for scrollbar parts. r=mstange

Print preview documents might use a different DPI depending on the print
target.

Differential Revision: https://phabricator.services.mozilla.com/D123939